# ai-prompt-toolkit

./: .env.example  .gitignore  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  DEMO_SUMMARY.md  Dockerfile  ENHANCED_GUARDRAILS_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  demo_without_llm.py  docker-compose.yml  environment.yml  minimal_demo.py  pyproject.toml  run_test.ps1  setup_env.bat  test_ollama.py
data/: demo_prompts.py
docs/: README.md  api.md  examples.md  installation.md  quickstart.md
examples/cli/: cli_examples.sh
examples/notebooks/: prompt_optimization_tutorial.ipynb
examples/python-sdk/: basic_usage.py
scripts/: demo.py  demo_prompt_improvement.py  guardrails_demo.py  setup.py  simple_demo.py
src/ai_prompt_toolkit/: __init__.py  cli.py  main.py
src/ai_prompt_toolkit/api/: __init__.py  routes.py
src/ai_prompt_toolkit/api/endpoints/: analytics.py  llm.py  optimization.py  security.py  templates.py
src/ai_prompt_toolkit/caching/: cache_manager.py
src/ai_prompt_toolkit/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
src/ai_prompt_toolkit/models/: __init__.py  optimization.py  prompt_template.py
src/ai_prompt_toolkit/monitoring/: metrics.py
src/ai_prompt_toolkit/security/: __init__.py  enhanced_guardrails.py  guardrails.py  injection_detector.py
src/ai_prompt_toolkit/services/: __init__.py  llm_factory.py  optimization_service.py  template_service.py
src/ai_prompt_toolkit/templates/: builtin_templates.py
src/ai_prompt_toolkit/utils/: __init__.py  cost_calculator.py  prompt_analyzer.py
tests/: __init__.py  test_config.py  test_enhanced_guardrails.py  test_optimization_service.py  test_prompt_analyzer.py  test_security.py
