[tool.poetry]
name = "ai-prompt-toolkit"
version = "0.1.0"
description = "Advanced AI Prompt Engineering & Management Toolkit with automated optimization, injection detection, and multi-LLM support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_prompt_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.5"
langchain-aws = "^0.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
aiofiles = "^23.2.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
redis = "^5.0.1"
celery = "^5.3.4"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
typer = "^0.9.0"
rich = "^13.7.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"
textstat = "^0.7.3"
spacy = "^3.7.0"
transformers = "^4.36.0"
torch = "^2.1.0"
sentence-transformers = "^2.2.2"
openai = "^1.3.0"
boto3 = "^1.34.0"
ollama = "^0.1.7"
guardrails-ai = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
httpx = "^0.25.2"

[tool.poetry.scripts]
ai-prompt-toolkit = "ai_prompt_toolkit.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ai_prompt_toolkit"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ai_prompt_toolkit --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
